--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
   "license": "ISC",
   "dependencies": {
     "@cosmostation/cosmosjs": "^0.10",
-    "discord.js": "^12.3.1",
-    "request": "^2.88.2"
+    "discord.js": "^12.3.1"
   }
 }
