--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "license": "ISC",
   "dependencies": {
     "@cosmostation/cosmosjs": "^0.10",
-    "discord.js": "^12.3.1"
+    "discord.js": "^12.3.1",
+    "express": "^4.17.1",
+    "node-cache": "^5.1.2"
   }
 }
