--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,26 +2,30 @@ name: Continuous integration
 
 on:
   push:
-    branches: [ main, dev ]
+    branches: [develop, staging, serenity, halo, euphoria]
 
 jobs:
 
   build:
 
-    runs-on: ubuntu-latest
+    #runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     steps:
     - uses: actions/checkout@v2
     - name: Set environment variable
       run: |
         SHORT_SHA_COMMIT=$(git rev-parse --short HEAD)
-        echo CONTAINER_RELEASE_IMAGE=ghcr.io/aura-nw/discord-faucet-bot:${GITHUB_REF_NAME}_${SHORT_SHA_COMMIT} >> $GITHUB_ENV
+        echo CONTAINER_RELEASE_IMAGE=ghcr.io/aura-nw/aura-explorer-api:${GITHUB_REF_NAME}_${SHORT_SHA_COMMIT} >> $GITHUB_ENV
         echo REPO_MANIFEST_NAME=gitops >> $GITHUB_ENV
         echo REPO_MANIFEST_URL=github.com/aura-nw/gitops.git >> $GITHUB_ENV
         echo REPO_MANIFEST_BRANCH=master >> $GITHUB_ENV
-        echo REPO_MANIFEST_ENV_DEV=./clusters/k8s-dev/discord-faucet-bot >> $GITHUB_ENV
-        echo REPO_MANIFEST_ENV_MAIN=./clusters/k8s-prod/discord-faucet-bot >> $GITHUB_ENV
-        echo REPO_MANIFEST_TAG_IMAGE=image_discord_faucet_bot >> $GITHUB_ENV
+        echo REPO_MANIFEST_ENV_DEV=./clusters/k8s-dev/explorer >> $GITHUB_ENV
+        echo REPO_MANIFEST_ENV_MAIN=./clusters/k8s-prod/explorer >> $GITHUB_ENV
+        echo REPO_MANIFEST_ENV_EUPHORIA=./clusters/k8s-testnet-euphoria/explorer >> $GITHUB_ENV
+        echo REPO_MANIFEST_ENV_SERENITY=./clusters/k8s-testnet-serenity/explorer >> $GITHUB_ENV
+        echo REPO_MANIFEST_ENV_HALO=./clusters/k8s-testnet-serenity/explorer >> $GITHUB_ENV
+        echo REPO_MANIFEST_TAG_IMAGE=image_aura_explorer_api >> $GITHUB_ENV
     - name: Build the Docker image and push it to the registry
       env:
         GITHUB_USERNAME: ${{ secrets.REGISTRY_USERNAME }}
