--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "@cosmostation/cosmosjs": "^0.10",
+    "async": "^3.2.3",
     "discord.js": "^12.3.1",
     "express": "^4.17.1",
     "node-cache": "^5.1.2"
