--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: Continuous integration
 
 on:
   push:
-    branches: [develop, staging, serenity, halo, euphoria]
+    branches: main
 
 jobs:
   build:
@@ -22,6 +22,7 @@ jobs:
         echo REPO_MANIFEST_ENV_EUPHORIA=./clusters/k8s-testnet-euphoria/discord-faucet-bot >> $GITHUB_ENV
         echo REPO_MANIFEST_ENV_SERENITY=./clusters/k8s-testnet-serenity/discord-faucet-bot >> $GITHUB_ENV
         echo REPO_MANIFEST_ENV_HALO=./clusters/k8s-testnet-halo/discord-faucet-bot >> $GITHUB_ENV
+        echo REPO_MANIFEST_ENV_MAIN=./clusters/k8s-prod/discord-faucet-bot >> $GITHUB_ENV
         echo REPO_MANIFEST_TAG_IMAGE=image_discord_faucet_bot >> $GITHUB_ENV
     - name: Build the Docker image and push it to the registry
       env:
