--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,8 +25,8 @@ jobs:
         echo REPO_MANIFEST_TAG_IMAGE=image_discord_faucet_bot >> $GITHUB_ENV
     - name: Build the Docker image and push it to the registry
       env:
-        GITHUB_USERNAME: ${{ secrets.REGISTRY_USERNAME }}
-        GITHUB_PASSWORD: ${{ secrets.REGISTRY_PASSWORD }}
+        GITHUB_USERNAME: ${{ github.actor }}
+        GITHUB_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
       run: |
         ls -al /bin
         chmod 777 -R ./ci
